Fixed showing scrollbar on the summary field

--- a/frontend/src/shared/components/tasque-task-editing/task-editing.component.sass
+++ b/frontend/src/shared/components/tasque-task-editing/task-editing.component.sass
@@ -92,6 +92,7 @@ $task-summary-buttons-width: 161px
     font-size: 20px
 
 .summary-text
+  line-height: 25px
   max-height: 250px
   word-wrap: break-word
   overflow-y: auto
